fixed positioning of name on mobile to make it more visible

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -548,7 +548,7 @@
 		height: 57px;
 	}
 	.banner-content .banner-info {
-		top: 100%;
+		top: 60%;
 		margin-top: -180px;
 	}
 	.home-banner-one .banner-content {
